fix: remove focus and hover on mobile

--- a/wp-content/themes/dna/vue/src/assets/scss/menu.scss
+++ b/wp-content/themes/dna/vue/src/assets/scss/menu.scss
@@ -200,9 +200,16 @@ nav{
     &.login .drop-item{
         padding: 10px 0;
     }
-    .drop-item:hover{
-        text-decoration: none;
-        background-color: #f8f9fa;
+    .drop-item{
+        &:hover{
+            @media (min-width: $desktops){
+                text-decoration: none;
+                background-color: #f8f9fa;
+            }
+        }
+        &:focus{
+            outline: none;
+        }
     }
     .dropdown-item{
         color: whitesmoke;
